<resources>
    <string name="server_client_id">547129611807-gaqhjoj8mhjvbhb3puno97dfpeb4fkfv.apps.googleusercontent.com</string>
    <string name="app_name">Vortex</string>
    <string name="txt_nom_app_splashscreen1">V</string>
    <string name="txt_nom_app_splashscreen2">O</string>
    <string name="txt_nom_app_splashscreen3">RTEX</string>
    <string name="version">copyright vortex 2020</string>
    <!-- bording title -->
    <string name="onboarding_text1">Let\'s Travel</string>
    <string name="onboarding_text2">Plan trip</string>
    <string name="onboarding_text3">Book a travel</string>
    <string name="onboarding_text4">Book a taxi</string>
    <string name="onboarding_text5">Welcome on Vortex</string>
    <!-- bording body -->
    <string name="onboarding_body">
        Your new travel companion, Vortex bring you to all your destinations.
        Travel faster by avoiding bad weather and enjoy your trip.
    </string>
    <string name="onboarding_body2">
        Businessman, travel lover… Plan your trips in advance, anytime and anywhere !
        Vortex offers you the best planning experience.
    </string>
    <string name="onboarding_body3">
        Search and compare the best offers from the best agencies for your trip.
        Locate the agencies closest you, as well as the hotels near your destination
    </string>
    <string name="onboarding_body4">
        Do you need a taxi to go and out from the agency ? Our Psiit service offers
        you the opportunity to get in touch with professionals in the trade.
    </string>
    <string name="onboarding_body5">Welcome on Vortex</string>
    <string name="test">test</string>
    <string name="signin_subtitle">please sign in to inter on our app</string>
    <string name="signin_title">Sign In</string>
    <string name="hint_email">username or email@gmail.com</string>
    <string name="hint_password">Password</string>
    <string name="text_view_text1_cb_login">Remember me</string>
    <string name="cb_auto">Auto</string>
    <string name="cb_validation">validation</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="have_acount">Don\'t have account ?</string>
    <string name="register_now">Register now.</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_subtitle">Please sign up and access to better content</string>
    <string name="username">Username</string>
    <string name="Firstname">First name</string>
    <string name="email">Email@gmail.com</string>
    <string name="phone">6*********</string>
    <string name="money">10 000</string>
    <string name="send_me_email">Send me email</string>
    <string name="terms_license">I accepts terms and license</string>
    <string name="reset_password_title1">Please enter your registered email to reset password</string>
    <string name="recover">Recover password</string>
    <string name="mail_check_title">Check your mails</string>
    <string name="mail_check_subtitle">We have send you new password on your register email address</string>
    <string name="go_mail">Go to mail</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_subtitle">Please enter your hold and your new password</string>
    <string name="hold">hold password</string>
    <string name="newp">new password</string>
    <string name="PhoneVerification">Phone Verification</string>
    <string name="yourphone">Your phone number</string>
    <string name="getstar">Get started !</string>
    <string name="sendme">Send me code</string>
    <string name="user_name_profile"> Bakari Potter</string>
    <string name="point1">2500 points</string>
    <string name="point2">4000 points</string>
    <string name="point3">11000 points</string>
    <string name="username1_propfile">Username</string>
    <string name="Email_propfile">Email</string>
    <string name="Telephone">Telephone</string>
    <string name="password_profile">Password</string>
    <string name="save_profile">Save</string>
    <string name="Notification">Notifications</string>
    <string name="Wallets">Wallets</string>
    <string name="Languages">Languages</string>
    <string name="Coupons">Coupons</string>
    <string name="Term">Terms $ Conditions</string>
    <string name="Private">Privacy Police</string>
    <string name="help">Help Center</string>
    <string name="About">About us</string>
    <string name="paiementstate_title">Add Coupon</string>
    <string name="paiementstate_subtitle">Please enter your data to process transaction</string>
    <string name="paiementstate1_subtitle">Please choose your payment mode</string>
    <string name="paiementstate2_subtitle">Please finalize your payment</string>
    <string name="paiementstate_Next">Next</string>
    <string name="paiementstate_Pay">Pay</string>
    <string name="paiementstate3_title">Payment Status</string>
    <string name="paiementstate3_subtitle">Successful !</string>
    <string name="btn_ok_ps3">Ok</string>
    <string name="popup2_title">Congratulation !</string>
    <string name="popup2_subtitle">You win +200 exp</string>
    <string name="popup2_subsubtitle">Win exp and have a reduction for your next trip</string>
    <string name="popup3_title1">Filter</string>
    <string name="popup3_title2">Price</string>
    <string name="popup3_title3">Type</string>
    <string name="popup3_subtitle1">Add filter conditions</string>
    <string name="popup3_subtitle2">Min</string>
    <string name="popup3_subtitle3">Max</string>
    <string name="popup3_subsubtitle1">Normal</string>
    <string name="popup3_subsubtitle2">Vip</string>
    <string name="price1">2 000</string>
    <string name="price2">5 000</string>
    <string name="popup4_title">Connection Failed !</string>
    <string name="popup4_close">Close</string>
    <string name="popup4_retry">Retry</string>
    <string name="popup5_title">Add passenger</string>
    <string name="popup6_title">Rate your travel</string>
    <string name="popup7_title">Choose your seat</string>
    <string name="popup4_subtitle">Please verified your internet connection</string>
    <string name="plan_your_tripe">Plan your tripe</string>
    <string name="forth">Forth</string>
    <string name="forth2">Forth and back</string>
    <string name="history">Travel history</string>
    <string name="depart">Depart from</string>
    <string name="arrival">Arrival At</string>
    <string name="date_test">21-10-2001</string>
    <string name="search">Search and compare</string>
    <string name="vip">VIP</string>
    <string name="classic">Classic</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="ville1">Douala</string>
    <string name="ville2">Yaounde</string>
    <string name="from">from</string>
    <string name="time">/ 5h</string>
    <string name="book">Book your tripe</string>
    <string name="search_hint">Search to compare</string>
    <string name="dla">DLA</string>
    <string name="yde">YDE</string>
    <string name="tiret">-</string>
    <string name="match">Match list</string>
    <string name="agence_name">Finex Voyage</string>
    <string name="number_item">+3 more</string>
    <string name="time2">5H</string>
    <string name="hr1">8:00</string>
    <string name="hr2">12h00</string>
    <string name="price">Vip for 5000 fcfa</string>
    <string name="map_token">pk.eyJ1IjoibGxhc3RrcmFrdyIsImEiOiJjazhuZngxdmIwcHJyM3JwOGk0c2RwaWMyIn0.yJcRNt8l2Y61YdXfBVCC4g</string>
    <string name="ticket_title">Buy your ticket</string>
    <string name="buy">Buy</string>
    <string name="ticket_code_title">Your ticket code</string>
    <string name="ticket_code">14ND DF45 FRE4 ZF54</string>
    <string name="agence_name_title">Agence</string>
    <string name="passenger_name_title">Passenger</string>
    <string name="passenger_name">Bakari Potter</string>
    <string name="date_title">Date</string>
    <string name="travel_id_title">Travel ID</string>
    <string name="travel_id">Y-128</string>
    <string name="boarding_title">Boarding time</string>
    <string name="seat_title">Seat</string>
    <string name="seat">5A</string>
    <string name="class_title">Class</string>
    <string name="add_passenger">+1</string>
    <string name="user_location_permission_explanation">Activer la localisation !</string>
    <string name="user_location_permission_not_granted">Autoriser la localisation !</string>
    <string name="experience">experience</string>
    <string name="gold">Gold</string>
    <string name="confirm">Confirm</string>
    <string name="bakari_potter">Bakari Potter</string>
    <string name="llastkrakw21_gmail_com">llastkrakw21@gmail.com</string>
    <string name="_237_691200485">+237 691200485</string>
    <string-array name="query_suggestions">
        <item>Douala</item>
        <item>Yaounde</item>
        <item>Kousserie</item>
        <item>Bamenda</item>
        <item>Bafang</item>
    </string-array>
</resources>
