<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="MissingPrefix" android:layout_width="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaiementStates.PaiementState"
    android:background="@drawable/degrade_de_fond">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="349dp"
        android:layout_height="117dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/bulle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="300dp"
        android:layout_height="10dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/barre_horizontale1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/paiement_title"
        style="@style/paiementstate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/paiementstate_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/paiement_subtitle"
        style="@style/paiementstate_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/paiementstate_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paiement_title" />

    <EditText
        android:id="@+id/paiementstate_username"
        style="@style/edit_text"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/test"
        android:drawableStart="@drawable/icon_email"
        android:hint="@string/Firstname"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paiement_subtitle"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/paiementstate_email"
        style="@style/edit_text"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/icon_message2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paiementstate_username"
        android:autofillHints="@string/test"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor"
        android:hint="@string/email"/>

    <LinearLayout
        android:id="@+id/paiementstate_linear1"
        android:layout_marginTop="10dp"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paiementstate_email">

        <Spinner
            android:id="@+id/paiementstate_spinner"
            style="@style/spinner"
            android:layout_marginEnd="10dp"
            />

        <EditText
            android:id="@+id/paiementstate_phone"
            style="@style/edit_text"
            android:layout_width="220dp"
            android:drawableStart="@drawable/icon_phone"
            android:autofillHints="@string/test"
            android:inputType="phone"
            tools:ignore="LabelFor"
            android:hint="@string/phone"/>
    </LinearLayout>

    <EditText
        android:id="@+id/paiementstate_password"
        style="@style/edit_text"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/icon_show_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paiementstate_linear1"
        android:autofillHints="@string/test"
        android:inputType="textPassword"
        tools:ignore="LabelFor"
        android:hint="@string/hint_password"/>

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:src="@drawable/back_row"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.494"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_next_paiementstate"
        style="@style/paiementstate_Next"
        android:layout_width="120dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:text="@string/paiementstate_Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paiementstate_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>