<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@color/blanc">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="80dp"
    app:cardBackgroundColor="@color/blanc"
    app:cardElevation="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/small_h_bg"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/agence_image"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:background="@drawable/classe_view"
            android:contentDescription="@string/test" />

        <TextView
            android:id="@+id/name_ville1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/agence_image"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/ville1"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/name_ville1"
            android:fontFamily="@font/poppins_light"
            android:text="@string/from"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/name_ville2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/from"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/ville2"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/agence_image"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/date_test"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/date"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/time"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/rating"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/time"
            android:contentDescription="@string/test"
            android:src="@drawable/ic_star_gold_24dp" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/name_ville2"
            android:contentDescription="@string/test"
            android:src="@drawable/arrow_go" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>