<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/degrade_de_fond"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".paiementStates.PaiementState">


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="349dp"
            android:layout_height="117dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/test"
            android:src="@drawable/bulle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="300dp"
            android:layout_height="10dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/barre_horizontale3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            android:contentDescription="@string/test"/>

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="66dp"
            android:layout_height="55dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/test"/>

        <TextView
            android:id="@+id/paiement_title"
            style="@style/paiementstate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/paiementstate_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <TextView
            android:id="@+id/paiement_subtitle"
            style="@style/paiementstate_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/paiementstate1_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paiement_title" />

        <ImageView
            android:id="@+id/image_pay"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="42dp"
            android:contentDescription="@string/test"
            android:foregroundGravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/paiement_subtitle" />

        <EditText
            android:id="@+id/paiementstate_phone"
            style="@style/edit_text"
            android:layout_width="220dp"
            android:layout_marginTop="24dp"
            android:autofillHints="@string/test"
            android:drawableStart="@drawable/icon_phone"
            android:hint="@string/phone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_pay"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/paiementstate_money"
            style="@style/edit_text"
            android:layout_width="220dp"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/test"
            android:drawableStart="@drawable/icon_money"
            android:hint="@string/money"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paiementstate_phone"
            tools:ignore="LabelFor" />

        <com.mukesh.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_extrabold"
            android:gravity="center"
            android:inputType="number"
            android:itemBackground="@drawable/back_ground_spinner"
            android:textColor="@android:color/white"
            app:itemCount="4"
            app:itemHeight="60dp"
            app:itemWidth="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paiementstate_money"
            app:lineColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:id="@+id/cb_paiementstate"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_view">

            <CheckBox
                android:id="@+id/login_checkbox"
                style="@style/chcek_box_indicator1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:checked="true"
                android:text="@string/cb_auto" />

            <TextView
                android:id="@+id/login_forgot"
                style="@style/chcek_box_indicator2"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/cb_validation" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_next_paiementstate_2"
            style="@style/paiementstate_Pay"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:padding="15dp"
            android:text="@string/paiementstate_Pay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_paiementstate" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>